# chatgpt-on-wechat

./: .breakpoints  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  GUYMCP.md  LICENSE  README.md  RUN.sh  _PS_TO_KILL.sh  _RUN.sh  _TAIL.sh  app.py  config-template-coze-discord-proxy.json  config-template.json  config.js  config.json  config.py  converter.sh  docker-compose.yml  installCertificates.command  keys_drew.txt  main.py  modes.json  nixpacks.toml  pyproject.toml  pytest.ini  requirement.txt  requirements-optional.txt  requirements-test.txt  requirements.txt  role.md  run.sh  show_pkl.py  shutdown.sh  simple_login_form_test.html  start.sh  stop.sh  tail_log.sh  (+6 more)
.github/: ISSUE_TEMPLATE.md
.streamlit/: config.toml
CoW_web/: Channel.py  Chat.py  Home.py  __init__.py  app.py  cinfig_info.py  config_manager.py
apps/: .gitignore  all_app_list.py  app.py  app_factory.py  lite_app.py  victorinox.py  wechat_roleplay.py
bot/: bot.py  bot_factory.py  database_manager.py  openai_compatible_bot.py  session_manager.py
bots/: .gitignore  all_bot_list.py  bot.py  bot_executor.py  initialize.py
bridge/: agent_bridge.py  agent_event_handler.py  agent_initializer.py  bridge.py  context.py  omni.py  reply.py
channel/: ANSWER_APOLOGY.py  channel.py  channel_factory.py  chat_channel.py  chat_message.py  file_cache.py
cli/: __init__.py  __main__.py  cli.py  utils.py
common/: cloud_client.py  const.py  dequeue.py  expired_dict.py  linkai_client.py  log.py  memory.py  package_manager.py  singleton.py  sorted_dict.py  time_check.py  tmp_dir.py  (+3 more)
(+1100 files in other folders)
