[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cowagent"
version = "0.0.1"
description = "CowAgent - AI Agent on WeChat and more"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28.2",
]

[project.scripts]
cow = "cli.cli:main"

[tool.setuptools.packages.find]
include = ["cli*"]
