[build-system]
requires = ["setuptools>=45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cowagent"
version = "1.0.0"
description = "CowAgent - AI Agent on WeChat and more"
requires-python = ">=3.7"
dependencies = [
    "click>=8.0",
    "requests>=2.28.2",
]

[project.scripts]
cow = "cli.cli:main"

[tool.setuptools.packages.find]
include = ["cli*"]
